--- a/israel.css
+++ b/israel.css
@@ -29,7 +29,7 @@
          url('fonts/JosefinSlab-SemiBoldItalic-webfont.ttf') format('truetype'),
          url('fonts/JosefinSlab-SemiBoldItalic-webfont.svg#JosefinSlabSemiBoldItalic') format('svg');
     font-weight: normal;
-
+    font-style: italic;
 }
 
 body {
@@ -96,7 +96,7 @@ option {
 .chart_area {
   margin: 0px;
   width: 100%;
-  height: 100%;
+  height: 400px;
   display: inline-block;
   float:left;
 }
@@ -104,12 +104,12 @@ option {
 /*chart css*/
 
 #chart {
-  margin-left: -40px;
-  height: 506px;
+  float: left;
+  margin: auto;
 }
 
-text {
-  font: 10px sans-serif;
+#text {
+  font: 10px "Josefin Slab";
 }
 
 .dot {
