adding svg map and jquery that goes with it. i put the jquery in a file separate from the main javascript.

--- a/israel.css
+++ b/israel.css
@@ -122,8 +122,8 @@ option {
   display: inline;
   float:left;
   vertical-align: middle;
-  background-color: #E6E7E8;
-  margin-top: 20px;
+/*  background-color: #E6E7E8;
+*/  margin-top: 20px;
 }
 
 .half {
@@ -196,6 +196,13 @@ input[type=radio]:checked + label:before {
 }
 
 #year_toggle{
+}
+
+/*map style*/
+#map {
+  outline: 1px;
+/*  background-color: #E6E7E8;*/
+
 }
 
 
