--- a/israel2.css
+++ b/israel2.css
@@ -152,6 +152,10 @@ option {
   padding: 10px 10px 10px 10px;
 }
 
+#eventdiv{
+	padding: 10px 10px 10px 60px !important;
+}
+
 .two-third {
 /*  padding: 10px;*/
   /*margin: 0 0 0 10px;*/
