--- a/israel2.css
+++ b/israel2.css
@@ -42,13 +42,28 @@ p {
   font-family: 'Josefin Slab';
   font-style: normal;
   font-size: 1em;
-  line-height: 1.25em;
+  line-height: 1.35em;
   margin: 0px;
+}
+
+h5 a {
+  font-family: 'Josefin Slab';
+  font-style: normal;
+  line-height: 1.25em;
+  color: #F47E1F;
+  bottom: 0px;
+  text-decoration: none;
+}
+
+
+h5 a:hover {
+  color: #4F5051;
+  text-decoration: underline;
 }
 
 h1 {
   font-family: 'OpenSansCondensedLight'; 
-  /*font-style: normal;*/
+  /*font-style: normal;*/ 
   font-size: 2.5em;
   margin: 0px;
 }
@@ -65,8 +80,10 @@ h2 {
 h3 {
   font-family: 'OpenSansCondensedLight';
   font-style: normal;
-  font-size: 1.25em;
+  font-size: 1.35em;
   margin:0px;
+  text-decoration-line: underline;
+  color: #5b5b5b;
   /*margin: .3em .3em .3em .3em;*/
 }
 
@@ -81,7 +98,6 @@ select {
 option {
   font-size: 2em;
   font-family: 'Josefin Slab';
-
 }
 
 .header {
@@ -101,6 +117,18 @@ option {
   display: inline-block;
 }
 
+.footer {
+  width: 100%;
+  height: 65px;
+  margin-top: 100px;
+  bottom: 0px;
+  margin-left: auto;
+  margin-right:auto;
+  display: inline-block;
+  background-color: #CCCCCC;
+  opacity: .7;
+  z-index: -1;
+}
 /*.slide {
   width: 80%;
   height: 45px;
@@ -148,7 +176,9 @@ option {
 }
 
 #eventdiv {
-  margin-left: 50px;
+  margin-left: 60px;
+  line-height: 1.3;
+  width: 725px;
 }
 
 .chart_area {
@@ -226,13 +256,9 @@ label:before {
   color: #e377c2;
 } 
 
-/*.radio label:before {  
-    border-radius: 8px;  
-} */
-
 input[type=checkbox]:checked + label:before {  
     content: "\2713";  
-    color: #F47E1F;  
+    color: #CCCCCC;  
     font-size: 1em;  
     text-align: center;  
     line-height: 18px;  
