added a background texture to the design.

--- a/israel2.css
+++ b/israel2.css
@@ -31,7 +31,7 @@
 body {
   margin-right: auto;
   margin-left: auto;
-  background-color: white;
+  background-image: url("subtle_grunge.png");
   color: #4F5051;
   font-family: 'Josefin Slab';
   font-size: 1em;
